--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -102,7 +102,7 @@
                 <hr>
                 </ul>
                 <div>
-                    <button type = "button" class = "btn cart-btn">Continue to Checkout</button>
+                    <button type = "button" class = "btn cart-btn green-btn">Continue to Checkout</button>
                 </div>
                 
                 
