--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -25,60 +25,23 @@
                 <div class="cart-item">
                   <table>
                       <tbody>
-                          <tr>
+                          <tr *ngFor="let cart of cart.cartitem">
                               <td><img src = "assets/img/product/product.png"></td>
-                              <td><h5 class = "mb-0">Resolute</h5>
-                                   <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
+                              <!-- <td><img src = "{{cart.media_product[0].image}}"></td> -->
+                              <td><h5 class = "mb-0">{{cart.product_detail.title}}</h5>
+                                   <!-- <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p> -->
                                    <div class = "product-quantity">
-                                    <button type = "button"class = "minus" (click) = minus()>-</button>
-                                    <input type = "text" [value] ="quantity">   
-                                    <button type = "button" (click) = plus()>+</button>
+                                    <!-- <button type = "button" class = "minus" (click) = minus()>-</button> -->
+                                    Qty:<input type = "text" [value] ="cart.stock">
+                                    <!-- <button type = "button" (click) = plus()>+</button> -->
                                   </div>
                             </td>
-                            <td class = "text-center"><h4>$639</h4></td>
-                            
-                           
-                            <td  class = "text-end"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+                            <td class = "text-center"><h4>${{cart.price}}</h4></td>
+                            <td  class = "text-end"><button type="button" (click)="deleteCartItem(cart.id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
                           </tr>
-                          <tr>
-                              <td colspan="4"><hr></td>
-                          </tr>
-                          <tr>
-                            <td><img src = "assets/img/product/product.png"></td>
-                            <td><h5 class = "mb-0">Resolute</h5>
-                                 <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
-                                 <div class = "product-quantity">
-                                  <button type = "button"class = "minus" (click) = minus()>-</button>
-                                  <input type = "text" [value] ="quantity">   
-                                  <button type = "button" (click) = plus()>+</button>
-                                </div>
-                          </td>
-                          <td class = "text-center"><h4>$639</h4></td>
-                          
-                         
-                          <td  class = "text-end"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td colspan="5"><hr></td>
-                        </tr>
-                        <tr>
-                          <td class = "cart-product-img"><img src = "assets/img/product/product.png"></td>
-                          <td><h5 class = "mb-0">Resolute</h5>
-                               <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
-                               <div class = "product-quantity">
-                                <button type = "button"class = "minus" (click) = minus()>-</button>
-                                <input type = "text" [value] ="quantity">   
-                                <button type = "button" (click) = plus()>+</button>
-                              </div>
-                        </td>
-                        <td class = "text-center"><h4>$639</h4></td>
-                        
-                       
-                        <td  class = "text-end"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-                      </tr>
                       </tbody>
                   </table>
-                </div> 
+                </div>
              </div>
         </div>
         <div class = "col-lg-5 col-12">
@@ -87,7 +50,7 @@
                     <hr>
                 <li class = "d-flex justify-content-between py-2">
                     <p>Subtotal</p>
-                    <p><span>$639</span></p>
+                    <p><span>${{cart.Totalamount}}</span></p>
                 </li>
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
@@ -97,15 +60,13 @@
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
                     <h5 class = "mb-0">Total</h5>
-                    <h5 class = "mb-0"><span>$649</span></h5>
+                    <h5 class = "mb-0"><span>${{cart.Totalamount+10}}</span></h5>
                 </li>
                 <hr>
                 </ul>
                 <div>
                     <button type = "button" class = "btn cart-btn">Continue to Checkout</button>
                 </div>
-                
-                
             </div>
         </div>
      </div>
