pages login cart and guard

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <div class = "text-center">
-                            <button type="button" class="btn  blue-btn text-center" [disabled]="!registerForm.valid">Submit</button>
+                            <button type="submit" class="btn blue-btn text-center" [disabled]="!registerForm.valid">Submit</button>
                         </div>
 
                     </form>
